0.10.8 - 2018-XX-XX

  1. POM updates for GCS connector 1.6.7.

  2. Remove Hadoop3 support.

  3. Deprecate BigQueryOutputFormat in favor of IndirectBigQueryOutputFormat.


0.10.7 - 2018-05-08

  1. POM updates for GCS connector 1.6.6.

  2. Change Maven project structure to be better compatible with IDEs.

  3. Support Hadoop 3.


0.10.6 - 2018-04-12

  1. Wire location through load, extract, and query jobs.

  2. Always require at least 2 partitions for sharded exports.

  3. Update all dependencies to latest versions.

  4. POM updates for GCS connector 1.6.5.


0.10.5 - 2018-03-19

  1. POM updates for GCS connector 1.6.4.

  2. Remove Avro and Gson classes from Hadoop 2 shaded jar
     because they are already included in the Hadoop 2 distribution.


0.10.4 - 2018-01-25

  1. POM updates for GCS connector 1.6.3.


0.10.3 - 2017-11-21

  1. POM updates for GCS connector 1.6.2.


0.10.2 - 2017-04-14

  1. POM updates for GCS connector 1.6.1.


0.10.1 - 2016-12-16

  1. Added a configurable write disposition when using
     IndirectBigQueryOutputFormat with "WRITE_APPEND" as the default.


0.10.0 - 2016-11-07

  1. Update output configuration keys to conform to the format in
     BigQueryConfiguration and have BigQueryOutputConfiguration handle
     the output path resolution and configuration.


0.9.0 - 2016-11-04

  1. Added temporary-path resolution to BigQueryConfiguration to
     automatically default to the GCS-specified system bucket if the BigQuery
     specific GCS bucket isn't specified and an explicit temporary GCS
     path for BigQuery isn't specified.
  2. Refactored the new IndirectBigQueryOutputFormat class hierarchy
     to require less boilerplate in format-specific implementations.
  3. Added support for federated BigQuery table outputs using the
     IndirectBigQueryOutputFormat.


0.8.1 - 2016-10-10

  1. Misc minor refactoring.


0.8.0 - 2016-10-05

  1. Added new still-experimental versions of BigQuery output which buffer to