@@ -317,6 +317,10 @@
                     <include>com.fasterxml.**</include>
                     <include>com.google.common.**</include>
                   </includes>
+                  <excludes>
+                    <exclude>com.google.cloud.hadoop.util.AccessTokenProvider</exclude>
+                    <exclude>com.google.cloud.hadoop.util.AccessTokenProvider$AccessToken</exclude>
+                  </excludes>
                 </relocation>
                 <relocation>
                   <pattern>org</pattern>
