@@ -14,12 +14,14 @@
 
 package com.google.cloud.hadoop.fs.gcs;
 
+import static com.google.common.truth.Truth.assertThat;
 import static org.junit.Assert.assertThrows;
 
 import com.google.cloud.hadoop.gcsio.GoogleCloudStorageFileSystem;
 import com.google.cloud.hadoop.gcsio.GoogleCloudStorageFileSystemIntegrationTest;
 import com.google.cloud.hadoop.gcsio.GoogleCloudStorageFileSystemOptions.TimestampUpdatePredicate;
 import com.google.cloud.hadoop.gcsio.testing.TestConfiguration;
+import com.google.cloud.hadoop.testing.TestingAccessTokenProvider;
 import com.google.cloud.hadoop.util.HadoopVersionInfo;
 import com.google.common.base.Strings;
 import java.io.File;
@@ -647,5 +649,18 @@ public abstract class GoogleHadoopFileSystemTestBase extends HadoopFileSystemTes
     Assert.assertFalse(
         "Should be ignored",
         predicate.shouldUpdateTimestamp(new URI("/")));
+  }
+
+  @Test
+  public void testInvalidCredentialFromAccessTokenProvider()
+      throws URISyntaxException, IOException {
+    Configuration config = loadConfig();
+    config.set("fs.gs.auth.access.token.provider.impl", TestingAccessTokenProvider.class.getName());
+    URI gsUri = new URI("gs://foobar/");
+
+    IOException thrown =
+        assertThrows(
+            IOException.class, () -> new GoogleHadoopFileSystem().initialize(gsUri, config));
+    assertThat(thrown).hasCauseThat().hasMessageThat().contains("Invalid Credentials");
   }
 }
